mule-user-guide/v/3.5/concur-connector.adoc
= Concur Connector

*_Standard_*

The Concur Anypoint connector for Mule ESB and CloudHub is used as a bidirectional gateway between Concur and Mule applications.

To use the Concur connector, you must have, at minimum, the following requirements:

* A Concur developer account - sign up for one at http://developer.concur.com/[developer.concur.com]
* A consumer key assigned by Concur; refer to the detailed documentation on how to link:/mule-user-guide/v/3.7/using-a-connector-to-access-an-oauth-api[use the Concur connector to access an OAuth API].

== Assumptions

This document assumes that you are familiar with Mule, link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint Connectors], and the link:/mule-user-guide/v/3.6/anypoint-studio-essentials[Anypoint Studio interface]. To increase your familiarity with Studio, consider completing one or more link:/mule-user-guide/v/3.6/basic-studio-tutorial[Anypoint Studio Tutorials]. Further, this page assumes that you have a basic understanding of link:/mule-user-guide/v/3.7/mule-concepts[Mule flows] and link:/mule-user-guide/v/3.6/global-elements[Mule Global Elements]. 

This document describes implementation examples within the context of Anypoint Studio, Mule ESB’s graphical user interface, and, also includes configuration details for doing the same in the XML Editor.

== Installing Concur Connector in Anypoint Studio

You can "test drive" the Concur connector by installing it in Anypoint Studio. Follow the instructions to  https://developer.mulesoft.com/docs/display/35X/Concur+Connector#[download and launch Anypoint Studio], then follow the steps below to install the Concur connector.

However, to use the Concur connector in a production environment, you must have either:

* An Enterprise license to use Mule 
* A CloudHub Starter, Professional, or Enterprise account

Contact the mailto:info@mulesoft.com[MuleSoft Sales Team] to obtain either of these. (Read more about link:/mule-user-guide/v/3.7/installing-an-enterprise-license[Installing an Enterprise License].)

== Configuring the Concur Connector

To install the Concur Connector in Anypoint Studio:

. Under the *Help* menu in *Anypoint Studio*, select *Install New Software.*
. In the Install menu, in the *Work with*: field, click the drop-down menu, and click *Anypoint Connectors Update Site.*
. In the table below the *Filter* field, click the right arrow to expand the *Standard* folder, then select Concur Connector *(Mule 3.5+)*. Click *Next*.
+

image:install.png[install]

. Review the details of the item you selected, then click *Next*.
. Click to accept terms and conditions of the product, then click *Finish*.
. Click *Restart Now* to complete the installation. Once you have installed the connector and restarted Studio you will see several new message processors available in the palette, under the Connectors category.


To use the Concur connector in your Mule application, you must configure:

* A global Concur element that is used by all the Concur connectors in the application (read more about link:/mule-user-guide/v/3.6/global-elements[global elements in Mule]).
* Parameters of each Concur connector instance in the application.

[tabs]
------
[tab,title="Studio Visual Editor"]
....
Follow these steps to create a global Concur configuration in a Mule application:

. Click the *Global Elements* tab at the base of the canvas, then click *Create*.
. In the *Choose Global Type* wizard, use the filter to locate, then select Concur**,** then click *OK*.
. Configure the parameters according to the table below.

+
image:ConcurGlobalElementProps.png[ConcurGlobalElementProps]
+
[width="100%",cols="50%,50%",options="header",]
|===
|Parameter |Description
|*Name* |Enter a name for the configuration so it can be referenced later by the `config-ref` parameter in the flow
|*Username* |A Username for connecting to the Concur instance
|*Password* |Password associated with the username
|*API URL* |The base URL to connect to the Concur API
|*Consumer Key* |The Consumer Key assigned to the account
|===
. Access the *Pooling Profile* tab to configure any settings relevant to managing multiple connections via a connection pool.
. Access the *Reconnection* tab to configure any settings relevant to reconnection strategies that Mule should execute if it loses its connection to Concur.
. Click *OK* to save the global connector configurations.
. Return to the *Message Flow* tab in Studio.

Follow these steps to configure the parameters of a Concur connector in the flow:

. Drag the Concur connector onto the canvas, then select it to open the Properties Editor console.
. Configure the parameters of the connector according to the table below.
+
[cols=",,",options="header",]
|===
|Field |Description |Default
|*Display Name* |Enter a unique label for the connector in your application. |Concur
|*Connector Configuration* |Connect to a global element linked to this connector. Global elements encapsulate reusable data about the connection to the target resource or service. Select the global Concur connector element that you just created. | 
|*Operation* |Select the action this component must perform. |Batch Attendee List
|===
. Click blank space on the canvas to save your configurations.
....
[tab,title="XML Editor"]
....
First, ensure that you have included the Concur namespaces in your configuration file.

[source, code, linenums]
----
http://www.mulesoft.org/schema/mule/concur
http://www.mulesoft.org/schema/mule/concur/current/mule-concur.xsd
----

Follow these steps to configure a Concur connector in your application.

. First, create a global Concur configuration outside and above your flows, using the following global configuration code.
+

<concur:config name="Concur" username="YOUR_USERNAME" password="YOUR_PASSWORD" apiUrl="YOUR_SERVICENOW_URI" consumerKey="YOUR_CONSUMER_KEY" doc:name="Concur"/>

+
[width="100%",cols="50%,50%",options="header",]
|===
a|
Attribute

 a|
Description

|*name* |Enter a name for the configuration so it can be referenced from within the flow.
|*username* |Username for connecting to the Concur instance.
|*password* |Password to log into the Concur instance.
|*apiUrl* |The URL of the Concur instance. 
|*consumerKey* |The consumer key associated with your Concur account
|===
+

. Build your application flow, then add a Concur connector using one of the following operations. Follow the links in the table below to access detailed configuration reference for each of these operations.


[WARNING]
Concur Connector 1.0 and Concur Connector 2.0 share the same Mule API Reference. The reference page is built for Mule 3.4 and supports Mule 3.5 as well.

[width="100%",cols="50%,50%",options="header",]
|===
a|
Operation

 a|
Description

| http://mulesoft.github.io/concur-connector/mule/concur-config.html#batch-attendee-list[<concur:batch-attendee-list>] |Make batch changes to attendee lists
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#batch-list-items[<concur:batch-list-items>] |Make batch changes to list items
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#close-payment-batch[<concur:close-payment-batch>] |POST Payment Batch Close
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#create-or-update-users[<concur:create-or-update-users>] |Create or update users with batch of user profiles
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#create-receipt-image[<concur:create-receipt-image>] |Create a new image in the receipt store
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-attendee-details[<concur:get-attendee-details>] |GET Attendee Details
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-expense-entry-details[<concur:get-expense-entry-details>] |GET Expense Entry Details
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-expense-group-configuration[<concur:get-expense-group-configuration>] |Retrieve the expense group configuration
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-expense-report-detail[<concur:get-expense-report-detail>] |GET Expense Report Detail
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-itinerary[<concur:get-itinerary>] |Get Itinerary Details
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-list-details[<concur:get-list-details>] |Get List Details
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-list-items[<concur:get-list-items>] |GET List Items Request
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-list-of-attendees[<concur:get-list-of-attendees>] |GET List of Attendees
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-list-of-expense-reports[<concur:get-list-of-expense-reports>] |GET List of Expense Reports
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-list-of-form-fields[<concur:get-list-of-form-fields>] |Get List of Employee Form Fields
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-list-of-forms-of-payment[<concur:get-list-of-forms-of-payment>] |Retrieve the list of Forms of Payment
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-list-of-lists[<concur:get-list-of-lists>] |Get List of Lists
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-list-of-payment-batches[<concur:get-list-of-payment-batches>] |Get List of Payment Batches
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-list-of-receipts[<concur:get-list-of-receipts>] + |Get a list of all receipt IDs owned by the user associated with the OAuth token
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-receipt-image-uri[<concur:get-receipt-image-uri>] |Get the URI of a Receipt Image for a given ID
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-travel-profile[<concur:get-travel-profile>] |Retrieve the travel profile
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-travel-requests-list[<concur:get-travel-requests-list>] |Retrieve the Travel requests list
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-updated-travel-profiles[<concur:get-updated-travel-profiles>] |Retrieve the list of updated travel profiles
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#get-user-profile[<concur:get-user-profile>] |Retrieve the user profile
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#list-itineraries[<concur:list-itineraries>] |Retrieve the List of Itineraries
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#post-expense-entry-attendee[<concur:post-expense-entry-attendee>] |POST Expense Entry Attendee
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#post-expense-entry-request[<concur:post-expense-entry-request>] |POST Expense Entry Request. +
Note: Concur recommends that you post one expense entry per request.
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#post-expense-report-header[<concur:post-expense-report-header>] |POST Expense Report Header
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#post-expense-report-header-batch[<concur:post-expense-report-header-batch>] |POST Expense Report Header Batch
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#post-expense-report-submit-request[<concur:post-expense-report-submit-request>] |POST Expense Report Submit Request
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#quick-expense[<concur:quick-expense>] |Post a new quick expense
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#quick-expense-list[<concur:quick-expense-list>] |Retrieve all quick expenses
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#trip-approval[<concur:trip-approval>] |Approve Trip Itinerary
| http://mulesoft.github.io/concur-connector/mule/concur-config.html#update-loyalty-program[<concur:update-loyalty-program>] |Update the Loyalty Program
|===
....
------

== Example Use Case

As a Concur administrator, I would like to create and submit expense reports to Concur.

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
. Drag an HTTP Endpoint into a new flow. Open the properties editor of the endpoint. Set the exchange pattern to one-way and the Path to `submitreport`.
+

image:ex1.png[ex1]
+

The new flow is then reachable through the path http://localhost:8081/submitreport. As the exchange pattern is set to one-way, no response message will not be returned to the requester.

. Add a Set Payload transformer after the HTTP endpoint to set the payload to a predefined set of values that match the format that Concur expects
. Configure the Set Payload transformer according to the table below.
+

[cols=",",options="header"]
|===
|Field |Value
|Display Name	|April Expenses
|Value |#[['name':'April Expenses','purpose':'All expenses for April','comment':'This is a comment.','orgUnit1':'US','orgUnit2':'NW','orgUnit3':'Redmond','custom1':'Client','custo
m2':'Local','userDefinedDate':'2014-03-26 15:15:07.0']]
|===

+
image:ex2.png[ex2]
+

[NOTE]
You can configure an external source such as a .csv file instead of using the Set Payload transformer to supply values to the expense report.
+

. Drag a Concur connector into the flow to post an expense report header.
. Add a new global element by clicking the plus sign next to the Connector Configuration field.
. Configure this Global Element according to the table below (Refer to Configuring the Concur Connector for more details).
+

[cols=",",options="header"]
|===
|Property |Description
|API URL	|Enter the base URL to connect to the Concur API
|Consumer Key	|Enter the Consumer Key assigned to the user
|Name	|Enter a unique label for this global element to be referenced by connectors
|Password	|Enter the user password
|Username	|Enter a Username for connecting to the Concur instance
|===
+

. Click *Test Connection* to confirm that Mule can connect with your Concur instance. If the connection is successful, click *OK* to save the configurations of the global element. If unsuccessful, revise or correct any incorrect parameters, then test again.
. Back in the properties editor of the Concur connector, configure the remaining parameters according to the table below.

+
[width="100%",cols="50%,50%",options="header",]
|===
|Field |Value
|Display Name |Post Expense Report Header
|Connector Configuration |Concur (the global element you have created)
|Operation |Post Expense Report Header
|General a|
Select *Define Attributes*, then enter the following:

Name: #[*payload*.name]

Purpose: #[*payload*.purpose]            

Comment: #[*payload*.comment]

OrgUnit1: #[*payload*.orgUnit1]

OrgUnit2: #[*payload*.orgUnit2]

OrgUnit3: #[*payload*.orgUnit3]

Custom1: #[*payload*.custom1]

Custom2: #[*payload*.custom2]

User Defined Data: #[*payload*.userDefinedData]

|===
+

image:conc1.png[conc1]

. Drag a DataMapper transformer between the Set Payload transformer and the Concur connector, then click on it to open its properties editor.
. Configure the properties of the DataMapper according to the steps below. +
.. In the *Input type*, select **Map<k,v>**, then select *User Defined.*
.. Click **Create/Edit Structure**.  
.. Enter a name for the Map, and under *Type*, select *Element*.
.. Add fields to the input structure according to the table below. +
+

[cols=",",options="header",]
|===
|Name |Type
|comment |String
|custom1 |String
|custom2 |String
|name |String
|orgUnit1 |String
|orgUnit2 |String
|orgUnit3 |String
|purpose |String
|userDefinedData |String
|===

.. The Output properties are automatically configured to correspond to the Concur connector.
.. Click *Create Mapping*
.. Drag each input data field to its corresponding output Concur field.
.. Click the blank space on the Canvas to save the changes.

. Add a Variable transformer to preserve the Report ID from the message payload. Configure the transformer according to the table below.
+
[cols=",",options="header",]
|===
|Field |Value
|Display Name |Extract Report ID (or any other name you prefer)
|Operation |Set Variable
|Name |Report ID
|Value |#[groovy:payload.reportDetailsUrl.tokenize('/')[-1]]
|===

+
image:ex3.png[ex3]
+

. Add a Set Payload transformer, then configure it according to the table below.
+
[cols=",",options="header",]
|===
|Field |Value
|Display Name |Set Payload
|Value |`#[['crnCode':'US','expKey':'BUSPR','description':'Business Promotions','transactionDate':'2014-01-12', 'transactionAmount':'29', 'comment':'Brochure Sample', 'vendorDescription':'Kinkos','isPersonal':'N']]`
|===

+
image:ex4.png[ex4]
+

. Add another Concur connector to the flow to create a expense entry request.
. In the *Connector Configuration* field, select the global Concur element you have created.
. Configure the remaining parameters according to the table below.
+
[width="100%",cols="50%,50%",options="header",]
|===
|Field |Value
|Display Name |Post Expense Entry Request
|Config Reference |Concur (the global element you have created)
|Operation |Post expense entry request
|Report ID |`#[flowVars['ReportID']]`
|General a|
Select *Define Attributes*, then enter the following:

Crn Code: #[*payload*.expense.crnCode]

Exp Key: #[*payload*.expense.expKey]

Transaction Date: #[*payload*.expense.transactionDate]

Transaction Amount: #[*payload*.expense.transactionAmount]

Comment: #[*payload*.expense.comment]

Vendor Description: #[*payload*.expense.vendorDescription]

Is Personal: #[*payload*.expense.isPersonal]

|===
+

image:conc2.png[conc2]

. Drag another DataMapper between the Set Payload transformer and the Post Expense Entry Request, then configure it according to the steps below. +
.. In the *Input type*, select **Map<k,v>**, then select *User Defined.*
.. Click **Create/Edit Structure**.  
.. Enter a name for the Map, then under *Type*, select *Element*.
.. Add fields to the input structure according to the table below.
+
[cols=",",options="header",]
|===
|Comment |Type
|crnCode |String
|description |String
|expKey |String
|isPersonal |String
|transactionAmount |String
|transactionDate |String
|vendorDescription |String
|===
.. The Output properties are automatically configured to correspond to the Concur connector.
.. Click *Create Mapping*.
.. Drag each input data field to its corresponding output Concur field.
.. Click the blank space on the Canvas to save the changes.
. Finally, add a Concur connector at the end of the flow to post the expense report to Concur.
. In the *Connector Configuration* field, select the Concur global element you created.
. Configure the remaining parameters according to the table below.
+
[cols=",",options="header",]
|===
|Field |Value
|Display Name |Post Expense Report
|Operation |Post expense repot submit request
|Report ID |#[flowVars['ReportID']]
|===

+
image:conc3.png[conc3]
+

. Run the project as a Mule Application.
....
[tab,title="XML Editor"]
....
. Add a *concur:config* global element to your project, then configure its attributes according to the table below (see code below for a complete sample).
+

[source, xml, linenums]
----
<concur:config name="Concur" username="<your username>" password="<your password>" apiUrl="<the API URL of your Concur instance>" consumerKey="<your Consumer Key>" doc:name="Concur"/>
----

+

[cols=",",options="header",]
|===
|Attribute |Value
|name |Concur
|doc:name |Concur
|username |Your username
|password |Your password
|apiUrl |the URL of your Concur instance
|consumerKey |your Consumer Key
|===
. Create a Mule flow with an *HTTP endpoint*, configuring the endpoint according to the table below (see code below for a complete sample).
+

[source, xml, linenums]
----
<http:inbound-endpoint exchange-pattern="one-way" host="localhost" port="8081" path="submitreport" doc:name="/submitreport"/>
----

+
[cols=",",options="header"]
|===
|Attribute |Value
|exchange-pattern	|one-way
|host	|local host
|port	|8081
|path	|submitreport
|doc:name	|`"/submitreport"/`
|===

. After the HTTP connector, add a *Set Payload transformer* to set the payload into expense report header. 
+

[source, xml, linenums]
----
<set-payload doc:name="Set Payload" value="#[['name':'April Expenses','purpose':'All expenses for April','comment':'This is a comment.','orgUnit1':'US','orgUnit2':'NW','orgUnit3':'Redmond','custom1':'Client','custom2':'Local','userDefinedDate':'2014-03-26 15:15:07.0']]"/>
----

. Add a *concur:post-expense-report-header* element to the flow. Configure the attributes according to the table below.
+

[source, xml, linenums]
----
<concur:post-expense-report-header config-ref="Concur" doc:name="Post Expense Report Header">
----

+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|Name |#[*payload*.name]
|Purpose |#[*payload*.purpose]     
|Comment |#[*payload*.comment]
|OrgUnit1 |#[*payload*.orgUnit1]
|OrgUnit2 |#[*payload*.orgUnit2]
|OrgUnit3 |#[*payload*.orgUnit3]
|Custom1 |#[*payload*.custom1]
|Custom2 |#[*payload*.custom2]
|User Defined Data |#[*payload*.userDefinedData]
|===
. Add a *DataMapper* element between the Set Payload transformer and the Concur connector.
+

[source, xml, linenums]
----
<data-mapper:transform config-ref="Map_To_Report" doc:name="Map To Report"/>
----

. You must configure the *DataMapper* element through Studio Visual Editor. Switch the view to the *Message Flow* view, then click the DataMapper element to set its properties. +
.. In the *Input type*, select **Map<k,v>**, then select *User Defined.*
.. Click **Create/Edit Structure**.  
.. Enter a name for the Map, and under *Type*, select *Element*.
.. Add fields to the input structure according to the table below.
+

[cols=",",options="header",]
|===
|Name |Type
|comment |String
|custom1 |String
|custom2 |String
|name |String
|orgUnit1 |String
|orgUnit2 |String
|OrgUnit3 |String
|userDefinedata |String
|===

. Add a **set-variable** element in the flow after the DataMapper to save the Expense Report ID.
+

[source, xml, linenums]
----
<set-variable variableName="ReportId" value="#[groovy:payload.reportDetailsUrl.tokenize('/')[-1]]" doc:name="Extract Report Id"/>
----

+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
a|`variableName`
|ReportId
|value |#[groovy:payload.reportDetailsUrl.tokenize('/')[-1]]
|doc:name |Extract Report Id
|===

. Now, add a *set-payload* element.
+

[source, xml, linenums]
----
<set-payload value="#[['crnCode':'US','expKey':'BUSPR','description':'Business Promotions','transactionDate':'2014-01-12','transactionAmount':'29','comment':'Brochure Sample','vendorDescription':'Kinkos','isPersonal':'N']]" doc:name="Set Payload"/>
----

+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|value a|#[['crnCode':'US','expKey':'BUSPR','description':'Business Promotions','transactionDate':'2014-01-12','transactionAmount':'29','comment':'Brochure Sample','vendorDescription':'Kinkos','isPersonal':'N']]
|doc:name |Set Payload
|===

. Add a *concur:post-expense-entry-request* element to the flow.
+

[source, xml, linenums]
----
<concur:post-expense-entry-request config-ref="Concur" reportId="#[flowVars['ReportID']]" doc:name="Post Expense Entry Request">
----

+
Configure the attributes according to the table below.
+
[cols=",",options="header",]
|===
|Attribute |Value
|crnCode |payload.expense.crnCode
|expKey |payload.expense.expKey
|description |payload.expense.description
|transactionDate |payload.expense.transactionDate
|transactionAmount |payload.expense.transactionAmount
|comment |payload.expense.comment
|VendorDescription |payload.expense.vendorDescription
|isPersonal |payload.expense.isPersonal
|===

. Add a *DataMapper* element between the Set Payload transformer and the Concur connector.
. Configure the *DataMapper* element through Studio's Visual Editor. Switch the view to *Message Flow* view, then click the DataMapper element to set its properties. +
.. In the *Input type*, select Map**<k,v>**, then select *User Defined*.
.. Click **Create/Edit Structure**.  
.. Enter a name for the Map, then under *Type*, select *Element*.
.. Add fields to the input structure according to the table below.
+

[cols=",",options="header",]
|===
|Comment |Type
|crnCode |String
|description |String
|expKey |String
|isPersonal |String
|transactionAmount |String
|transactionDate |String
|vendorDescription |String
|===

.. The Output properties are automatically configured to correspond to the Concur connector.
.. Click *Create Mapping,* then drag each input data field to its corresponding output Concur field. Click the blank space on the Canvas to save the changes.
. Add *concur:post-expense-report-submit-request* element to submit the expense report to concur.

[source, xml, linenums]
----
<concur:post-expense-report-submit-request config-ref="Concur" reportId="#[flowVars['ReportID']]" doc:name="Post Expense Report"/>
----
....
------

== Example Code

[source, xml, linenums]
----
<mule xmlns:json="http://www.mulesoft.org/schema/mule/json" xmlns:concur="http://www.mulesoft.org/schema/mule/concur" xmlns:data-mapper="http://www.mulesoft.org/schema/mule/ee/data-mapper" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:file="http://www.mulesoft.org/schema/mule/file" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.5.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
http://www.mulesoft.org/schema/mule/concur http://www.mulesoft.org/schema/mule/concur/current/mule-concur.xsd
http://www.mulesoft.org/schema/mule/ee/data-mapper http://www.mulesoft.org/schema/mule/ee/data-mapper/current/mule-data-mapper.xsd
http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
http://www.mulesoft.org/schema/mule/json http://www.mulesoft.org/schema/mule/json/current/mule-json.xsd">
    <concur:config name="Concur" username="conor@whiteskylabs.com" password="plots71Erie" apiUrl="https://www.concursolutions.com" consumerKey="hYzvi7B7QUukyUs7gXomn4" doc:name="Concur"/>
    <data-mapper:config name="Map_To_Report" transformationGraphPath="map_to_report.grf" doc:name="Map_To_Report"/>
    <data-mapper:config name="Map_To_ReportEntries" transformationGraphPath="map_to_reportentries.grf" doc:name="Map_To_ReportEntries"/>
    <flow name="concur-sample-usecase-submitreport" doc:name="concur-sample-usecase-submitreport">
        <http:inbound-endpoint exchange-pattern="one-way" host="localhost" port="8081" path="submitreport" doc:name="/submitreport"/>
        <set-payload doc:name="Set Payload" value="#[['name':'April Expenses','purpose':'All expenses for April','comment':'This is a comment.','orgUnit1':'US','orgUnit2':'NW','orgUnit3':'Redmond','custom1':'Client','custom2':'Local','userDefinedDate':'2014-03-26 15:15:07.0']]"/>
        <data-mapper:transform config-ref="Map_To_Report" doc:name="Map To Report"/>
        <concur:post-expense-report-header config-ref="Concur" doc:name="Post Expense Report Header">
            <concur:report-header name="#[payload.name]" purpose="#[payload.purpose]" comment="#[payload.comment]" orgUnit1="#[payload.orgUnit1]" orgUnit2="#[payload.orgUnit2]" orgUnit3="#[payload.orgUnit3]" custom1="#[payload.custom1]" custom2="#[payload.custom2]" userDefinedDate="#[payload.userDefinedDate]"/>
        </concur:post-expense-report-header>
        <set-variable variableName="ReportId" value="#[groovy:payload.reportDetailsUrl.tokenize('/')[-1]]" doc:name="Extract Report Id"/>
        <set-payload value="#[['crnCode':'US','expKey':'BUSPR','description':'Business Promotions','transactionDate':'2014-01-12','transactionAmount':'29','comment':'Brochure Sample','vendorDescription':'Kinkos','isPersonal':'N']]" doc:name="Set Payload"/>
        <data-mapper:transform config-ref="Map_To_ReportEntries" doc:name="Map To ReportEntries"/>
        <concur:post-expense-entry-request config-ref="Concur" reportId="#[flowVars['ReportID']]" doc:name="Post Expense Entry Request">
            <concur:report-entries>
                <concur:expense crnCode="#[payload.expense.crnCode]" expKey="#[payload.expense.expKey]" description="#[payload.expense.description]" transactionDate="#[payload.expense.transactionDate]" transactionAmount="#[payload.expense.transactionAmount]" comment="#[payload.expense.comment]" vendorDescription="#[payload.expense.vendorDescription]" isPersonal="#[payload.expense.isPersonal]"/>
            </concur:report-entries>
        </concur:post-expense-entry-request>
        <concur:post-expense-report-submit-request config-ref="Concur" reportId="#[flowVars['ReportID']]" doc:name="Post Expense Report"/>
    </flow>   
</mule>
----

== See Also

* Learn more about working with http://www.mulesoft.org/documentation/display/current/Anypoint+Connectors[Anypoint Connectors].
* Access the link:/release-notes/concur-connector-release-notes[release notes] for the Concur Connector.
